--- a/mobile/perfectplate/pubspec.yaml
+++ b/mobile/perfectplate/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^7.3.0
+  get_it: ^7.2.0
   http: ^0.13.4
+  shared_preferences: ^2.0.8
   sizer: ^2.0.15
 
 dev_dependencies:
