--- a/mobile/perfectplate/pubspec.yaml
+++ b/mobile/perfectplate/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_bloc: ^7.3.0
   get_it: ^7.2.0
   http: ^0.13.4
+  intl: ^0.17.0
   shared_preferences: ^2.0.8
   sizer: ^2.0.15
 
