--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,7 +15,9 @@
     "apisauce": "^2.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -43,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "react-router-dom": "^5.3.0"
   }
 }
