[mobile] add internet permission in androidmanifest

--- a/mobile/perfectplate/android/app/src/main/AndroidManifest.xml
+++ b/mobile/perfectplate/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.perfectplate">
+
+   <uses-permission android:name="android.permission.INTERNET" />
+   <application android:usesCleartextTraffic="true" />
    <application
-        android:label="perfectplate"
+        android:label="Perfect Plate"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
